--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Notebook</string>
+    <string name="text_edit_button">Edit</string>
+    <string name="text_done_button">Done</string>
 </resources>
